welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:7: error: ';' expected but ')' found.
    	return true)
                   ^